Blog details page initial markup and style complete

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                 <div class="blog-content-wrapper d-table">
                   <div class="blog-content-inner d-table-cell">
                     <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
-                    <h1><a href="#">Lorem Ipsum for Apps AppBinding</a></h1>
-                    <p class="author"><span>by </span>Tamal Saha</p>
+                    <h1><a href="blog-details.html">Lorem Ipsum for Apps AppBinding</a></h1>
+                    <p class="author"><span>by </span><a href="#">Tamal Saha</a></p>
                     <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
                       Kubernetes upholds
                       the philosophy that the core should be small and allow developers to write their own extensions.
@@ -153,7 +153,7 @@
               </div>
               <div class="column is-6">
                 <!-- slider image start  -->
-                <a href="#" class="blog-slider-image blog-bg-3"></a>
+                <a href="blog-details.html" class="blog-slider-image blog-bg-3"></a>
                 <!-- slider image end -->
               </div>
             </div>
@@ -168,7 +168,7 @@
                 <div class="blog-content-wrapper d-table">
                   <div class="blog-content-inner d-table-cell">
                     <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
-                    <h1><a href="#">UI design is a lorem Dpsum dular sign</a></h1>
+                    <h1><a href="blog-details.html">UI design is a lorem Dpsum dular sign</a></h1>
                     <p class="author"><span>by </span>Tamal Saha</p>
                     <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
                       Kubernetes upholds
@@ -178,14 +178,14 @@
                       standard Kubernetes resources. This allows anyone to write a controller for custom resources and
                       capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
                       name for this pattern</p>
-                    <a href="#" class="inline-button">Read More</a>
+                    <a href="blog-details.html" class="inline-button">Read More</a>
                   </div>
                 </div>
                 <!-- left content end -->
               </div>
               <div class="column is-6">
                 <!-- slider image start  -->
-                <a href="" class="blog-slider-image blog-bg-2"></a>
+                <a href="blog-details.html" class="blog-slider-image blog-bg-2"></a>
                 <!-- slider image end -->
               </div>
             </div>
@@ -194,37 +194,36 @@
 
           <!-- single slider start  -->
           <div class="single-blog">
-            <div class="columns">
-              <div class="column is-6">
-                <!-- left content start  -->
-                <div class="blog-content-wrapper d-table">
-                  <div class="blog-content-inner d-table-cell">
-                    <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
-                    <h1><a href="#">The case for AppBinding</a></h1>
-                    <p class="author"><span>by </span>Tamal Saha</p>
-                    <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
-                      Kubernetes upholds
-                      the philosophy that the core should be small and allow developers to write their own extensions.
-                      One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
-                      as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
-                      standard Kubernetes resources. This allows anyone to write a controller for custom resources and
-                      capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
-                      name for this pattern</p>
-                    <a href="#" class="inline-button">Read More</a>
+              <div class="columns">
+                <div class="column is-6">
+                  <!-- left content start  -->
+                  <div class="blog-content-wrapper d-table">
+                    <div class="blog-content-inner d-table-cell">
+                      <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
+                      <h1><a href="blog-details.html">Kubernetes is a lorem Dpsum dular sign</a></h1>
+                      <p class="author"><span>by </span>Tamal Saha</p>
+                      <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
+                        Kubernetes upholds
+                        the philosophy that the core should be small and allow developers to write their own extensions.
+                        One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
+                        as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
+                        standard Kubernetes resources. This allows anyone to write a controller for custom resources and
+                        capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
+                        name for this pattern</p>
+                      <a href="blog-details.html" class="inline-button">Read More</a>
+                    </div>
                   </div>
+                  <!-- left content end -->
                 </div>
-                <!-- left content end -->
-              </div>
-              <div class="column is-6">
-                <!-- slider image start  -->
-                <div class="blog-slider-image">
-                  <img src="/assets/images/slider-image/s-1.jpg" alt="">
+                <div class="column is-6">
+                  <!-- slider image start  -->
+                  <a href="blog-details.html" class="blog-slider-image blog-bg-1"></a>
+                  <!-- slider image end -->
                 </div>
-                <!-- slider image end -->
               </div>
             </div>
-          </div>
-          <!-- single slider end  -->
+            <!-- single slider end  -->
+
         </div>
       </div>
       <!-- slider wrapper end -->
@@ -281,7 +280,7 @@
             <div class="column is-4">
               <div class="single-blog-item">
                 <div class="blog-image-wrapper">
-                  <a href="#" class="blog-image blog-1"></a>
+                  <a href="blog-details.html" class="blog-image blog-1"></a>
                 </div>
                 <div class="single-blog-content">
                   <div class="blog-meta">
@@ -289,10 +288,10 @@
                     <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
                   </div>
                   <div class="blog-description">
-                    <h2><a href="#">Understanding Data
+                    <h2><a href="blog-details.html">Understanding Data
                         Transfer in AWS</a></h2>
                     <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
-                    <a href="#" class="inline-button">Read More</a>
+                    <a href="blog-details.html" class="inline-button">Read More</a>
                   </div>
                 </div>
               </div>
@@ -303,7 +302,7 @@
             <div class="column is-4">
               <div class="single-blog-item">
                 <div class="blog-image-wrapper">
-                  <a href="#" class="blog-image blog-2"></a>
+                  <a href="blog-details.html" class="blog-image blog-2"></a>
                 </div>
                 <div class="single-blog-content">
                   <div class="blog-meta">
@@ -311,10 +310,10 @@
                     <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
                   </div>
                   <div class="blog-description">
-                    <h2><a href="#">Understanding Data
+                    <h2><a href="blog-details.html">Understanding Data
                         Transfer in AWS</a></h2>
                     <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
-                    <a href="#" class="inline-button">Read More</a>
+                    <a href="blog-details.html" class="inline-button">Read More</a>
                   </div>
                 </div>
               </div>
@@ -336,7 +335,7 @@
                     <h2><a href="#">Understanding Data
                         Transfer in AWS</a></h2>
                     <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
-                    <a href="#" class="inline-button">Read More</a>
+                    <a href="blog-details.html" class="inline-button">Read More</a>
                   </div>
                 </div>
               </div>
@@ -358,7 +357,7 @@
                     <h2><a href="#">Understanding Data
                         Transfer in AWS</a></h2>
                     <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
-                    <a href="#" class="inline-button">Read More</a>
+                    <a href="blog-details.html" class="inline-button">Read More</a>
                   </div>
                 </div>
               </div>
@@ -377,10 +376,10 @@
                     <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
                   </div>
                   <div class="blog-description">
-                    <h2><a href="#">Understanding Data
+                    <h2><a href="blog-details.html">Understanding Data
                         Transfer in AWS</a></h2>
                     <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
-                    <a href="#" class="inline-button">Read More</a>
+                    <a href="blog-details.html" class="inline-button">Read More</a>
                   </div>
                 </div>
               </div>
@@ -399,7 +398,7 @@
                     <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
                   </div>
                   <div class="blog-description">
-                    <h2><a href="#">Understanding Data
+                    <h2><a href="blog-details.html">Understanding Data
                         Transfer in AWS</a></h2>
                     <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
                     <a href="#" class="inline-button">Read More</a>
@@ -413,7 +412,7 @@
             <div class="column is-4">
               <div class="single-blog-item">
                 <div class="blog-image-wrapper">
-                  <a href="#" class="blog-image blog-7"></a>
+                  <a href="blog-details.html" class="blog-image blog-7"></a>
                 </div>
                 <div class="single-blog-content">
                   <div class="blog-meta">
@@ -421,10 +420,10 @@
                     <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
                   </div>
                   <div class="blog-description">
-                    <h2><a href="#">Understanding Data
+                    <h2><a href="blog-details.html">Understanding Data
                         Transfer in AWS</a></h2>
                     <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
-                    <a href="#" class="inline-button">Read More</a>
+                    <a href="blog-details.html" class="inline-button">Read More</a>
                   </div>
                 </div>
               </div>
@@ -705,7 +704,6 @@
   <!-- go-to-top end -->
 
   <!-- Main JS -->
-  <script src="/assets/js/bulma-carousel.min.js"></script>
   <script src="/assets/js/main.js"></script>
 </body>
 
