responsive blog page

--- a/blog-details.html
+++ b/blog-details.html
@@ -108,9 +108,8 @@
 
           <!-- blog large image start -->
           <figure>
-            <a href="#">
-              <img src="/assets/images/blog-image/blog-large-images/1.jpg" alt="">
-              <figcaption>capture operational knowledge in a software form</figcaption>
+            <img src="/assets/images/blog-image/blog-large-images/1.jpg" alt="">
+            <figcaption>capture operational knowledge in a software form</figcaption>
             </a>
           </figure>
           <!-- blog large image end -->
@@ -134,13 +133,13 @@
                   <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <a href="#" class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/AppsCodeHQ"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                  <a href="https://twitter.com/AppsCodeHQ" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.facebook.com/appscode"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  <a href="https://www.facebook.com/appscode" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 </li>
               </ul>
             </div>
@@ -237,7 +236,8 @@ spec:
               some secret credential and/or some configuration parameters. So, we considered using a standard Kubernetes
               Service object."
             </blockquote>
-            <div class="name-descriptor">Tomas Albart, <span>Product designer at <a href="#" class="inline-button">AWS</a></span></div>
+            <div class="name-descriptor">Tomas Albart, <span>Product designer at <a href="#"
+                  class="inline-button">AWS</a></span></div>
             <!-- blockquote end -->
 
             <!-- list item with general content start  -->
@@ -295,13 +295,16 @@ spec:
     # names of the allowed roles to use this connection config in Vault
     allowedRoles: "*"
             </pre>
-            <p>Now, KubeVault operator can refer to this database object from it’s own CRD and issue secrets accordingly.</p>
+              <p>Now, KubeVault operator can refer to this database object from it’s own CRD and issue secrets
+                accordingly.</p>
             </div>
             <!-- code block end -->
 
             <!-- general text start  -->
-            <p>You can find the type definition and auto-generated Go client for AppBinding on <a href="#" class="inline-button">GitHub.</a></p>
-            <p>If you have read all the way to the end, I want to thank you. If you have any questions and want to know more, you can reach me via <a href="#" class="inline-button">Twitter or Email.</a></p>
+            <p>You can find the type definition and auto-generated Go client for AppBinding on <a href="#"
+                class="inline-button">GitHub.</a></p>
+            <p>If you have read all the way to the end, I want to thank you. If you have any questions and want to know
+              more, you can reach me via <a href="#" class="inline-button">Twitter or Email.</a></p>
             <!-- general text end -->
 
             <div class="tags">
