--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                 <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="#" class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
               </li>
               <li>
-                <a href="https://twitter.com/AppsCodeHQ"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/AppsCodeHQ" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </li>
               <li>
-                <a href="https://www.facebook.com/appscode"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/appscode" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
@@ -137,7 +137,7 @@
                   <div class="blog-content-inner d-table-cell">
                     <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
                     <h1><a href="blog-details.html">Lorem Ipsum for Apps AppBinding</a></h1>
-                    <p class="author"><span>by </span><a href="#">Tamal Saha</a></p>
+                    <p class="author"><span>by </span><a href="https://www.linkedin.com/in/tamalsaha" target="_blank">Tamal Saha</a></p>
                     <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
                       Kubernetes upholds
                       the philosophy that the core should be small and allow developers to write their own extensions.
@@ -146,7 +146,7 @@
                       standard Kubernetes resources. This allows anyone to write a controller for custom resources and
                       capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
                       name for this pattern</p>
-                    <a href="#" class="inline-button">Read More</a>
+                    <a href="blog-details.html" class="inline-button">Read More</a>
                   </div>
                 </div>
                 <!-- left content end -->
