download and copy icon add from font-awesome

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,9 @@ if (!doNotTrack) {
   <link rel="stylesheet" href="/assets/css/bulma.min.css" />
   
   
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/sass/main.min.css" />
+  
+  
 </head>
 
 <body>
